--- a/pinyin/index.html
+++ b/pinyin/index.html
@@ -168,13 +168,13 @@
                         player.play()
                     }//多个字									
                     else if (mainDiv.length > 1) {
-                        var word = ""
-                        for (var i = 0; i < mainDiv.length; i++) {
-                            word += mainDiv[i] + "(" + pinyinPro.pinyin(mainDiv[i], {
-                                toneType: 'num'
-                            }).replaceAll('ü','v').replaceAll('0','5') + ")"
-                        }
-                        var mp3Url = "https://tts.baidu.com/text2audio?tex=" + word + "&cuid=dict&lan=ZH&ctp=1&pdt=30&vol=9&per=4100"
+                        //var word = ""
+                        //for (var i = 0; i < mainDiv.length; i++) {
+                        //    word += mainDiv[i] + "(" + pinyinPro.pinyin(mainDiv[i], {
+                        //        toneType: 'num'
+                        //    }).replaceAll('ü','v').replaceAll('0','5') + ")"
+                        //}
+                        var mp3Url = "https://tts.baidu.com/text2audio?tex=" + mainDiv + "&cuid=dict&lan=ZH&ctp=1&pdt=30&vol=9&per=4100"
                         var player = new Audio(encodeURI(mp3Url))
                         player.play()
                     }
