--- a/shake/index.html
+++ b/shake/index.html
@@ -100,7 +100,7 @@
         var baseStation;
         var oBtn = document.getElementsByClassName('stopBtn')[0];
         var oResult = document.getElementsByClassName('name2')[0];
-        var arrName = ['卖萌券', '隐私券', '停止生气券', '做主券', '谢谢惠顾', '撒娇券', '女仆券', '认错券', '加班券', '再来一次', '按摩券', '亲亲券', '甜言蜜语券', '奶茶券', '情侣装券', '温柔体贴券', '压马路券', '男友心愿券', '分享秘密券', '听话券', '抱抱券', '浪漫券', '看小电影券', '洗衣服券', '喝酒券', '旅游券', '逛街券', '免追根究底券', '霸霸券', '嘿嘿嘿券', '真心话券', '角色扮演券', '礼物券', '角色互换券', '帮洗澡券', '美食券', '复制券', '原谅券', '洗白白券', '情趣内衣券', '停止冷战券', '免干家务券', '复制券', '女友心愿券', '赖床券', '洗头券', '男友心愿券', '吹头发券', '面壁思过券', '男友心愿券', '天荒地老券', '火锅券', '允许晚归券', '购物拎包券', '女友心愿券', '烧烤券', '男友心愿券', '零花钱券', '复制券', '睡懒觉券', '惊喜券', '天荒地老券', '复制券', '女友心愿券', '吃大餐券', '彩虹屁券', '女友心愿券', '一言为定券', '女友心愿券', '耍赖券', '赞美券', '女友心愿券', '复制券', '男友心愿券', '安慰券', '复制券', '男友心愿券', '请客券', '应酬券', '女友心愿券', '复制券', '打游戏券', '男友心愿券', '复制券', '女友心愿券', '男友心愿券'];
+        var arrName = ['卖萌券', '隐私券', '停止生气券', '做主券', '谢谢惠顾', '撒娇券', '女仆券', '认错券', '加班券', '再来一次', '按摩券', '亲亲券', '甜言蜜语券', '奶茶券', '情侣装券', '温柔体贴券', '压马路券', '男友心愿券', '分享秘密券', '听话券', '抱抱券', '浪漫券', '看小电影券', '洗衣服券', '喝酒券', '旅游券', '逛街券', '免追根究底券', '霸霸券', '嘿嘿嘿券', '真心话券', '角色扮演券', '礼物券', '角色互换券', '帮洗澡券', '美食券', '复制券', '原谅券', '洗白白券', '情趣内衣券', '停止冷战券', '免干家务券', '复制券', '女友心愿券', '赖床券', '洗头券', '男友心愿券', '吹头发券', '面壁思过券', '男友心愿券', '火锅券', '允许晚归券', '购物拎包券', '女友心愿券', '烧烤券', '男友心愿券', '零花钱券', '复制券', '睡懒觉券', '惊喜券', '复制券', '女友心愿券', '吃大餐券', '彩虹屁券', '女友心愿券', '一言为定券', '女友心愿券', '耍赖券', '赞美券', '女友心愿券', '复制券', '男友心愿券', '安慰券', '复制券', '男友心愿券', '请客券', '应酬券', '女友心愿券', '复制券', '打游戏券', '男友心愿券', '复制券', '女友心愿券', '男友心愿券'];
         //抽签的内容
         var step = 1;
         var cnt = 1;
